# octo-api

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/api/: api.rst  consumption.rst  octo-api.rst  pagination.rst  products.rst  utils.rst
octo_api/: __init__.py  api.py  consumption.py  pagination.py  products.py  utils.py
tests/: conftest.py  requirements.txt  test_consumption.py  test_industry.py  test_meter_points.py  test_products.py  test_tariffs.py
tests/responses/: agile_unit_rates.json  agile_unit_rates_page2.json  consumption.json  consumption_august.json  consumption_page2.json  consumption_reversed.json  consumption_reversed_page2.json  consumption_weekly.json  products_VAR-17-01-11.json  products_business_false.json  products_green.json  standard_unit_rates.json
tests/test_products_/: get_product_info_dual_register_tariffs.json  get_product_info_sample_quotes.json  get_product_info_single_register_gas_tariffs.json  single_register_electricity_tariffs.json  test_parse_tariffs.json
