[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "octo-api"
version = "0.1.0"
description = "Python interface to the Octopus Energy API."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/octo-api"
"Issue Tracker" = "https://github.com/domdfcoding/octo-api/issues"
"Source Code" = "https://github.com/domdfcoding/octo-api"
Documentation = "https://octo-api.readthedocs.io/en/latest"
