[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "octo-api"
version = "0.1.0"
description = "Python interface to the Octopus Energy API."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/octo-api"
"Issue Tracker" = "https://github.com/domdfcoding/octo-api/issues"
"Source Code" = "https://github.com/domdfcoding/octo-api"
Documentation = "https://octo-api.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "octo_api"
additional-files = [ "demo.py",]
